--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,35 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    console.table(inventors.filter(i => i.year >= 1500 && i.year <= 1599))
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.table(inventors.map(i => i.first + " " + i.last))
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.table(inventors.sort((a, b) => a.year - b.year))
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log(inventors.reduce((sum, i) => sum + (i.passed - i.year), 0))
 
     // 5. Sort the inventors by years lived
+    console.table(inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year)))
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    console.table(people.map(i => i.slice(i.indexOf(',') + 2)).sort())
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    console.log(data.reduce((count, i) => !count[i] ? count[i] = 1 : count[i]++, {}))
 
   </script>
 </body>
