--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,14 +28,20 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    const currentYear = (new Date()).getFullYear()
+    console.log(people.some(i => currentYear - i.year >= 19))
+    console.log(people.every(i => currentYear - i.year >= 19))
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    console.log(comments.find(i => i.id === 823423))
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    comments.splice(comments.findIndex(i => i.id === 823423), 1)
+    console.log(comments)
 
   </script>
 </body>
